tests/snapshots/yaml_suite_snapshots__yaml_suite_753E_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: "Block Scalar Strip [1.3]"
  from: "MYW6, modified for YAML 1.3"
  tags: literal scalar 1.3-mod whitespace
  yaml: "--- |-\n ab\n␣\n␣\n...\n"
  tree: "+STR\n +DOC ---\n  =VAL |ab\n -DOC ...\n-STR\n"
  json: "\"ab\"\n"
  dump: "--- |-\n  ab\n...\n"
