tests/snapshots/yaml_suite_snapshots__yaml_suite_7BMT_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: "Node and Mapping Key Anchors [1.3]"
  from: "U3XV, modified for YAML 1.3"
  tags: anchor comment mapping 1.3-mod
  yaml: "---\ntop1: &node1\n  &k1 key1: one\ntop2: &node2 # comment\n  key2: two\ntop3:\n  &k3 key3: three\nto…"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :top1\n   +MAP &node1\n    =VAL &k1 :key1\n    =VAL :one\n   -MAP\n  …"
  json: "{\n  \"top1\": {\n    \"key1\": \"one\"\n  },\n  \"top2\": {\n    \"key2\": \"two\"\n  },\n  \"top3\": {\n    \"key3\"…"
  dump: "---\ntop1: &node1\n  &k1 key1: one\ntop2: &node2\n  key2: two\ntop3:\n  &k3 key3: three\ntop4: &node4…"
